main.css
/* All browser sizes */
* {
    box-sizing: border-box;
}

.hidden {
    display: none;
}

/* Mobile First */
@media only screen and (min-width: 200px) {
    body {
        margin: 0;
        padding: 0;
        font-family: basic-sans, sans-serif;
        font-size: 20px;
        font-style: normal;
        font-weight: 200;
        color: #201C1D;
        background-image: url("images/border.png");
    }

    .page-width {
        max-width: 275px;
        margin-left: auto;
        margin-right: auto;
        text-align: center;
    }

    .button {
        border: 0px;
        padding: 0px;
        height: 20px;
        width: 75px;
        background-color: #FFF15D;
        font-weight: bold;
        font-size: 12px;
        border-radius: 1px;
    }

    .button:hover { 
        background-color: #CFE7CF;
      }

    #refresh-button {
        width: 150px;
    }

    section {
        margin-top: 30px;
    }

    img {
        width: 255px;
        transform: rotate(5deg);
        -webkit-transform: rotate(5deg);
        -moz-transform: rotate(5deg);
        -o-transform: 0.70s;
        -ms-transform: rotate(5deg);
        -webkit-box-shadow: 6px 6px 19px -12px rgba(0,0,0,0.48);
        -moz-box-shadow: 6px 6px 19px -12px rgba(0,0,0,0.48);
        box-shadow: 6px 6px 19px -12px rgba(0,0,0,0.48);
    }

    .background-box {
        background-color: #CFE7CF;
        margin-top: 50px;
    }

    .refresh-form {
        margin-top: 30px;
        margin-bottom: 75px;
    }

    .search-weather {
        width: 175px;
        margin-right: 8px;
        border: 1px solid #C9C7C7;
        height: 20px;
        border-radius: 1px;
    }

    .weather-form {
        margin-top: 40px;
    }

    h1 {
        font-family: continuo, sans-serif;
        font-size: 50px;
        font-style: normal;
        font-weight: 400;
        color: #201C1D;
        line-height: 100%;
        margin-top: 75px;
    }

    h2, h3 {
        font-family: yrsa, serif;
        font-weight: 400;
        font-style: normal;
    }
}

/* Desktop */
@media only screen and (min-width: 750px) {
    .page-width {
        max-width: 500px;
    }
    
    img {
        width: 500px;
    }
}

